[package]
name = "fanqie-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json"] }
anyhow = { version = "1.0.89" }
lazy_static = "1.5.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
