[package]
name = "booksource"
version = "0.0.0"
description = "书源"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "dialog-save", "dialog-open",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.82"
url = "2.5.0"
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
